Clases de tablas agregadas

--- a/ProyectoCartas.Shared/ProyectoCartas.Shared.csproj
+++ b/ProyectoCartas.Shared/ProyectoCartas.Shared.csproj
@@ -41,10 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ENUM\EstadoRegistro.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ENUM\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
